# HoyoGameUnlocker

./: .gitignore  CMakeLists.txt  README.md  Unlocker-Dev.sln
HoyoGameUnlocker/include/: GetGamePath.h
HoyoGameUnlocker/src/: GameInfo.cpp  GetGamePath.cpp
Unlocker-Dev/: Unlocker-Dev.vcxproj  Unlocker-Dev.vcxproj.filters
Unlocker-Dev/include/: ConfigurationIO.h  ConsoleShow.h  ConversionFunctions.h  GameInfo.h  GameRunningStatus.h  GetAdministratorPrivileges.h  GetGamePath.h  ModuleFinder.h  SYSHeader.h
Unlocker-Dev/src/: ConfigurationIO.cpp  ConversionFunctions.cpp  GameInfo.cpp  GameRunningStatus.cpp  GetAdministratorPrivileges.cpp  GetGamePath.cpp  ModuleFinder.cpp  main.cpp
Unlocker-Dev/x64/Debug/: Unlocker-Dev.exe.recipe  Unlocker-Dev.ilk  vc143.idb
Unlocker-Dev/x64/Debug/Unlocker-Dev.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Unlocker-Dev.lastbuildstate  clang-cl.command.1.tlog  clang-cl.read.1.tlog  clang-cl.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  lld-link.command.1.tlog  lld-link.read.1.tlog  lld-link.secondary.1.tlog  lld-link.write.1.tlog
Unlocker-Dev/x64/Debug/Unlocker-Dev_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
include/: ConfigurationIO.h  ConsoleShow.h  GameInfo.h  GetAdministratorPrivileges.h  GetGamePath.h  SYSHeader.h
src/: ConfigurationIO.cpp  ConsoleShow.cpp  GameInfo.cpp  GetAdministratorPrivileges.cpp  GetGamePath.cpp  main.cpp
(+11 files in other folders)
